--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,41 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Jost", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(135deg, #444cf755 25%, transparent 25%) -10px 0/
+      20px 20px,
+    linear-gradient(225deg, #444cf7 25%, transparent 25%) -10px 0/ 20px 20px,
+    linear-gradient(315deg, #444cf755 25%, transparent 25%) 0px 0/ 20px 20px,
+    linear-gradient(45deg, #444cf7 25%, #e5e5f7 25%) 0px 0/ 20px 20px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-body.dark{
+body.dark {
   color: white;
-  background: black;
+  background: linear-gradient(135deg, #4800ff55 25%, transparent 25%) -10px 0/
+      20px 20px,
+    linear-gradient(225deg, #4800ff 25%, transparent 25%) -10px 0/ 20px 20px,
+    linear-gradient(315deg, #4800ff55 25%, transparent 25%) 0px 0/ 20px 20px,
+    linear-gradient(45deg, #4800ff 25%, #000000 25%) 0px 0/ 20px 20px;
+}
+.wrapper {
+  width: 60%;
+  margin: 0 auto;
+  padding: 20px;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  border-radius: 20px;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
